# Haris-Online-Mart-

./: compose.yaml
inventory_consumer/: .env  Dockerfile
inventory_consumer/inventory_consumer/: db.py  main.py  settings.py
inventory_consumer/inventory_consumer/proto/: inventory_pb2.py  order_pb2.py
inventory_service/: pyproject.toml
inventory_service/inventory_service/: main.py  models.py  settings.py
inventory_service/inventory_service/proto/: inventory_pb2.py  operation_pb2.py
order_consumer/: .env  Dockerfile  pyproject.toml
order_consumer/order_consumer/: db.py  main.py  order_consumer_pb2.py  settings.py
order_service/: .env  Dockerfile  pyproject.toml
order_service/order_service/: main.py  models.py  order.proto  order_pb2.py  settings.py
order_service/order_service/proto/: order_pb2.py
product_consumer/: .env  Dockerfile  pyproject.toml
product_consumer/product_consumer/: db.py  main.py  models.py  product_consumer_pb2.py  settings.py
product_consumer/product_consumer/proto/: inventory_consumer_pb2.py  product_consumer.proto  product_consumer_pb2.py
product_service/: .env  Dockerfile  pyproject.toml
product_service/product_service/: main.py  models.py  product.proto  product_pb2.py  setting.py
product_service/product_service/proto/: product.proto  product_pb2.py
user_service/: .env  Dockerfile  README.md
user_service/tests/: test_main.py
user_service/user_service/: auth.py  main.py  model.py  setting.py  user.proto
user_service/user_service/router/: user.py
