[tool.poetry]
name = "order-consumer"
version = "0.1.0"
description = ""
authors = ["Muhammad Haris <139040989+malikharis01@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
